dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/ltng_M2M_AccountContactRelationship__c.object-meta.xml
<CustomObject>
    <description>Relationship between a select M2M Contact and an M2M Account.

In this example, an Account can have many Contacts - just as Contacts can have relationships in many Accounts.
(John Doe is an influencer at XYZ corp, but a gatekeeper at ABC inc.)</description>
    <label>M2M AccountContactRelation</label>
    <nameField>
        <displayFormat>ACR-{00000}</displayFormat>
        <label>Account Contact Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M2M AccountContactRelations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>