dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <inlineHelpText>Account that this relation is built to</inlineHelpText>
    <label>M2M Account</label>
    <referenceTo>ltng_M2M_Account__c</referenceTo>
    <relationshipLabel>M2M AccountContactRelations</relationshipLabel>
    <relationshipName>M2M_AccountContactRelations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>