dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <inlineHelpText>Contact that this relation is built to</inlineHelpText>
    <label>M2M Contact</label>
    <referenceTo>ltng_M2M_Contact__c</referenceTo>
    <relationshipLabel>M2M AccountContactRelations</relationshipLabel>
    <relationshipName>M2M_AccountContactRelations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>