dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>The date a relationship between a contact and account ended. Use with the Start Date to keep a history of the relationship.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>