dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether relationship is active (true) or not (false).</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>