dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/IsDirect__c.field-meta.xml
<CustomField>
    <fullName>IsDirect__c</fullName>
    <formula>ContactId__r.AccountId__c = AccountId__c</formula>
    <inlineHelpText>Indicates whether the account associated with the contact is the contact&#39;s primary account (true) or not (false).</inlineHelpText>
    <label>Is Direct</label>
    <type>Checkbox</type>
</CustomField>