dx/force-app/main/default/objects/ltng_M2M_AccountContactRelationship__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>The date a relationship between a contact and account began. Use with the End Date to keep a history of the relationship.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>